@@ -20,10 +20,10 @@ import java.util.List;
 import org.json.simple.parser.ParseException;
 import org.junit.Before;
 import org.junit.Test;
+import org.junit.experimental.categories.Category;
 import org.mozilla.android.sync.test.helpers.MockGlobalSessionCallback;
 import org.mozilla.android.sync.test.helpers.MockPrefsGlobalSession;
 import org.mozilla.android.sync.test.helpers.WaitHelper;
-import org.mozilla.android.sync.test.integration.TestBasicFetch.LiveDelegate;
 import org.mozilla.gecko.sync.CollectionKeys;
 import org.mozilla.gecko.sync.CryptoRecord;
 import org.mozilla.gecko.sync.ExtendedJSONObject;
@@ -39,6 +39,7 @@ import org.mozilla.gecko.sync.crypto.KeyBundle;
 import org.mozilla.gecko.sync.delegates.FreshStartDelegate;
 import org.mozilla.gecko.sync.repositories.domain.VersionConstants;
 
+@Category(IntegrationTestCategory.class)
 public class TestFreshStart {
   // TODO: switch this to use a local server, with appropriate setup.
   static final String TEST_CLUSTER_URL  = "https://scl2-sync1283.services.mozilla.com/";
@@ -103,12 +104,6 @@ public class TestFreshStart {
 
   @Test
   public void testLiveFreshStart() throws Exception {
-    // Dummy fetch to abort if internet connection is down.
-    LiveDelegate ld = TestBasicFetch.realLiveFetch(TEST_USERNAME, TEST_PASSWORD, session.config.infoURL());
-    if (ld.testFailureIgnored) {
-      return;
-    }
-
     assertEquals(TEST_USERNAME, Utils.usernameFromAccount(TEST_ACCOUNT));
     session.config.enabledEngineNames = new HashSet<String>();
     session.config.enabledEngineNames.add("bookmarks");
@@ -131,7 +126,7 @@ public class TestFreshStart {
     assertNotNull(o);
     MetaGlobal mg = new MetaGlobal(null, null);
     mg.setFromRecord(CryptoRecord.fromJSONRecord(o));
-    assertEquals(new Long(GlobalSession.STORAGE_VERSION), mg.getStorageVersion());
+    assertEquals(Long.valueOf(GlobalSession.STORAGE_VERSION), mg.getStorageVersion());
     List<String> namesList = new ArrayList<String>(mg.getEnabledEngineNames());
     Collections.sort(namesList);
     String[] names = namesList.toArray(new String[namesList.size()]);
